style shit added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <section class="hero-area flexible-container">
+            <div class="hero-half">
+                <h1 class="heading-1">Welcome To</h1>
+                <h1 class="heading-2">
+                    <span class="ornge">
+                        Andrew Garfield 
+                    </span>
+                    World
+                </h1>
+                <h3>Build Climber and Train Stopper</h3>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                <a href="http://" target="_blank" class="Anchor-btn">Hire Me</a>
+            </div>
+            <div class="hero-half">
+                <img src="img/Andrew.png" alt="">
+            </div>
+        </section>
+    </header>
 </body>
 </html>
