--- a/index.html
+++ b/index.html
@@ -10,23 +10,41 @@
 </head>
 <body>
     <header>
-        <section class="hero-area flexible-container">
-            <div class="hero-half">
-                <h1 class="heading-1">Welcome To</h1>
-                <h1 class="heading-2">
-                    <span class="ornge">
-                        Andrew Garfield 
-                    </span>
-                    World
-                </h1>
-                <h3>Build Climber and Train Stopper</h3>
-                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-                <a href="http://" target="_blank" class="Anchor-btn">Hire Me</a>
-            </div>
-            <div class="hero-half">
-                <img src="img/Andrew.png" alt="">
+        <section class="hero-area pb-100">
+            <div class="hero-content-wrapper flexible-container">
+                <div class="hero-half hero-text">
+                    <h1 class="heading-1">Welcome To</h1>
+                    <h1 class="heading-2">
+                        <span class="ornge">
+                            Andrew Garfield 
+                        </span>
+                        World
+                    </h1>
+                    <h3>Build Climber and Train Stopper</h3>
+                    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+                    <a href="http://" target="_blank" class="Anchor-btn">Hire Me</a>
+                </div>
+                <div class="hero-half">
+                    <img src="img/spider.png" alt="">
+                </div>
             </div>
         </section>
     </header>
+    <main>
+        <section class="dream-area">
+            <div class="hero-content-wrapper flexible-container">
+                <div class="hero-half">
+                    <img src="img/Andrew.png" alt="">
+                </div>
+                <div class="hero-half hero-text">
+                    <h1 class="heading-1">Dream Big</h1>
+                    <h3>Become a web developer</h3>
+                    <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                    <a href="http://" target="_blank" class="Anchor-btn">Download Resume</a>
+                </div>
+                
+            </div>
+        </section>
+    </main>
 </body>
 </html>
