--- a/index.html
+++ b/index.html
@@ -1,50 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spider Man</title>
     <!-- Css file Here -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <section class="hero-area pb-100">
-            <div class="hero-content-wrapper flexible-container">
-                <div class="hero-half hero-text">
-                    <h1 class="heading-1">Welcome To</h1>
-                    <h1 class="heading-2">
-                        <span class="ornge">
-                            Andrew Garfield 
-                        </span>
-                        World
-                    </h1>
-                    <h3>Build Climber and Train Stopper</h3>
-                    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-                    <a href="http://" target="_blank" class="Anchor-btn">Hire Me</a>
-                </div>
-                <div class="hero-half">
-                    <img src="img/spider.png" alt="">
-                </div>
-            </div>
-        </section>
+      <section class="hero-area pb-100">
+        <div class="hero-content-wrapper flexible-container">
+          <div class="hero-half hero-text">
+            <h1 class="heading-1">Welcome To</h1>
+            <h1 class="heading-2">
+              <span class="ornge"> Andrew Garfield </span>
+              World
+            </h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>
+              You might saw me jumping, climbing buildings, and stopping trains.
+              But nobody pays me a dime for that work. That's why I am learning
+              and mastering web development. I will not stop until I become the
+              Web Development Hero.
+            </p>
+            <a href="http://" target="_blank" class="Anchor-btn">Hire Me</a>
+          </div>
+          <div class="hero-half">
+            <img src="img/spider.png" alt="" />
+          </div>
+        </div>
+      </section>
     </header>
     <main>
-        <section class="dream-area">
-            <div class="hero-content-wrapper flexible-container">
-                <div class="hero-half">
-                    <img src="img/Andrew.png" alt="">
-                </div>
-                <div class="hero-half hero-text">
-                    <h1 class="heading-1">Dream Big</h1>
-                    <h3>Become a web developer</h3>
-                    <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-                    <a href="http://" target="_blank" class="Anchor-btn">Download Resume</a>
-                </div>
-                
-            </div>
-        </section>
+      <section class="dream-area">
+        <div class="hero-content-wrapper flexible-container">
+          <div class="hero-half">
+            <img src="img/Andrew.png" alt="" />
+          </div>
+          <div class="hero-half hero-text">
+            <h1 class="heading-1">Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>
+              I already learned the basic HTML and CSS. I can build any simple
+              website. I can even teach my grandma how to make simple website.
+              My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a href="http://" target="_blank" class="Anchor-btn"
+              >Download Resume</a
+            >
+          </div>
+        </div>
+      </section>
+      <section class="expertise-area">
+        <h2>Experiences</h2>
+        <div class="expertise-wrapper flexible-container">
+          <div class="box" id="first-box">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+          </div>
+          <div class="box" id="second-box">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
+            <p>
+              They didn't offer me a job. But I made myself as a remove web
+              developer. I made their website and showed it to them. They liked
+              it. And uploaded the content. It was fun working at Programming
+              Hero.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+    <footer>
+        <p>© Peter Parker 2022, a Programming Hero initiative.</p>
+    </footer>
+  </body>
 </html>
